--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,13 +12,13 @@
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "ui": "workspace:*"
+    "@mr/ui": "workspace:*"
   },
   "devDependencies": {
+    "@mr/tsconfig": "workspace:*",
     "@babel/core": "^7.0.0",
-    "eslint-config-custom": "workspace:*",
+    "@mr/eslint-config-custom": "workspace:*",
     "eslint": "7.32.0",
-    "tsconfig": "workspace:*",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
