--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,9 +11,9 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "eslint": "^7.32.0",
-    "eslint-config-custom": "workspace:*",
+    "@mr/eslint-config-custom": "workspace:*",
     "react": "^18.2.0",
-    "tsconfig": "workspace:*",
+    "@mr/tsconfig": "workspace:*",
     "typescript": "^4.5.2"
   }
 }
