--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -22,14 +22,19 @@
     "gen-env": "nx gen-env-types .env -o env.d.ts -e ."
   },
   "dependencies": {
+    "@nestjs/apollo": "^10.1.7",
     "@nestjs/common": "^8.4.7",
     "@nestjs/core": "^8.4.7",
+    "@nestjs/graphql": "^10.1.7",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^8.4.7",
     "@prisma/client": "^4.8.0",
+    "apollo-server-core": "^3.11.1",
+    "apollo-server-express": "^3.11.1",
     "bcrypt": "^5.1.0",
+    "graphql": "^16.6.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
