--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,19 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mr/ui": "workspace:*",
     "next": "13.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@mr/ui": "workspace:*"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@mr/tsconfig": "workspace:*",
     "@babel/core": "^7.0.0",
     "@mr/eslint-config-custom": "workspace:*",
-    "eslint": "7.32.0",
+    "@mr/tsconfig": "workspace:*",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
+    "autoprefixer": "^10.4.13",
+    "eslint": "7.32.0",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.5.3"
   }
 }
