--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,11 +19,12 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "gen-env": "nx gen-env-types .env -o env.d.ts -e ."
+    "gen-env": "pnpm dlx gen-env-types .env -o env.d.ts -e ."
   },
   "dependencies": {
     "@nestjs/apollo": "^10.1.7",
     "@nestjs/common": "^8.4.7",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^8.4.7",
     "@nestjs/graphql": "^10.1.7",
     "@nestjs/jwt": "^9.0.0",
