--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@mr/ui": "workspace:*",
+    "flowbite": "^1.5.5",
+    "flowbite-react": "^0.3.7",
     "next": "13.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
