--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,12 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
     "@mr/ui": "workspace:*",
     "flowbite": "^1.5.5",
     "flowbite-react": "^0.3.7",
+    "graphql": "^16.6.0",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -19,6 +21,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@graphql-codegen/cli": "2.16.2",
     "@mr/eslint-config-custom": "workspace:*",
     "@mr/tsconfig": "workspace:*",
     "@types/node": "^17.0.12",
@@ -28,6 +31,7 @@
     "eslint": "7.32.0",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.5.3"
+    "typescript": "^4.5.3",
+    "@graphql-codegen/client-preset": "1.2.4"
   }
 }
