added authexchange, made changes in auth module to make it work

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@mr/ui": "workspace:*",
     "@next/env": "^13.1.1",
+    "@urql/core": "^3.1.1",
     "@urql/devtools": "^2.0.3",
+    "@urql/exchange-auth": "^1.0.0",
     "flowbite": "^1.5.5",
     "flowbite-react": "^0.3.7",
     "graphql": "^16.6.0",
+    "jwt-decode": "^3.1.2",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
