--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -35,6 +35,7 @@
     "apollo-server-core": "^3.11.1",
     "apollo-server-express": "^3.11.1",
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "graphql": "^16.6.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
@@ -49,6 +50,7 @@
     "@nestjs/schematics": "^8.0.11",
     "@nestjs/testing": "^8.4.7",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.15",
     "@types/jest": "27.4.1",
     "@types/node": "^16.18.10",
