--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
     "@mr/ui": "workspace:*",
     "flowbite": "^1.5.5",
     "flowbite-react": "^0.3.7",
+    "jotai": "^1.12.1",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
