--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,11 +12,13 @@
     "@mr/ui": "workspace:*",
     "flowbite": "^1.5.5",
     "flowbite-react": "^0.3.7",
+    "formik": "^2.2.9",
     "jotai": "^1.12.1",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
