--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -37,6 +37,7 @@
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "graphql": "^16.6.0",
+    "graphql-subscriptions": "^2.0.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
