--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.13",
     "@mr/ui": "workspace:*",
     "@next/env": "^13.1.1",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@urql/core": "^3.1.1",
     "@urql/devtools": "^2.0.3",
     "@urql/exchange-auth": "^1.0.0",
@@ -26,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "urql": "^3.0.3",
     "yup": "^0.32.11"
   },
