--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,7 @@
     "flowbite": "^1.5.5",
     "flowbite-react": "^0.3.7",
     "formik": "^2.2.9",
+    "framer-motion": "^8.4.6",
     "graphql": "^16.6.0",
     "jotai": "^1.12.1",
     "jwt-decode": "^3.1.2",
